Fixed horizontal scrolling

--- a/src/public/styles/style.scss
+++ b/src/public/styles/style.scss
@@ -383,6 +383,10 @@ section {
     }
   }
   
+  #contactForm {
+    position: relative;
+  }
+  
   form {
     margin-bottom: 100px;
   }
